2013-03-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pt: Moved to the apps/ directory, with the other proper applications.
	* pt.man:

2013-03-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tests/data/ok/peg_json-indalign/0_basic_arithmetic: Updated to match
	* tests/data/ok/peg_json-indalign/2_fun_arithmetic: json::write 1.0.2
	* tests/data/ok/peg_json-indalign/3_peg_itself: ("/" not quoted as "\/")
	* tests/data/ok/peg_json-indalign/4_choice:
	* tests/data/ok/peg_json-indented/0_basic_arithmetic:
	* tests/data/ok/peg_json-indented/2_fun_arithmetic:
	* tests/data/ok/peg_json-indented/3_peg_itself:
	* tests/data/ok/peg_json-indented/4_choice:
	* tests/data/ok/peg_json-ultracompact/0_basic_arithmetic:
	* tests/data/ok/peg_json-ultracompact/2_fun_arithmetic:
	* tests/data/ok/peg_json-ultracompact/3_peg_itself:
	* tests/data/ok/peg_json-ultracompact/4_choice:

2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-11-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* rde_critcl/util.c: Fix build warning, get a strlen declaration.
	* rde_critcl/param.c: Fix bug in TRACE output.
	* rde_critcl/p.c: Tweaked TRACE output for clarity.
	* rde_critcl/ot.c: Fix the actual issue, a missing string rep for
	  a Tcl_Obj literal getting interned.
	* pt_rdengine.tcl: Bumped package version to 1.0.2
	* pt_rdengine.man:
	* pkgIndex.tcl

	* tests/data/ok/peg_param-critcl/0_basic_arithmetic: Updated the
	* tests/data/ok/peg_param-critcl/10_notahead: test data to match
	* tests/data/ok/peg_param-critcl/1_functions: the code change
	* tests/data/ok/peg_param-critcl/2_fun_arithmetic: (in param.c)
	* tests/data/ok/peg_param-critcl/3_peg_itself: above.
	* tests/data/ok/peg_param-critcl/4_choice: