@@ -144,13 +144,18 @@ identical, and [const false] otherwise.
 String equality is usable only if we can assume that the two trees are
 pure Tcl lists.
 
-[call [cmd ::pt::ast] [method terminal] [arg loc]]
+[call [cmd ::pt::ast] [method new0] [arg s] \
+	[arg loc] [opt [arg child]...]]
 
-This command command constructs the ast for a terminal node refering
-to the position [arg loc] in the input, and returns it as the result
-of the command.
+This command command constructs the ast for a nonterminal node
+refering refering to the symbol [arg s] at position [arg loc] in the
+input, and the set of child nodes [arg child] ..., from left
+right. The latter may be empty. The constructed node is returned as
+the result of the command. The end position is [arg loc]-1, i.e. one
+character before the start. This type of node is possible for rules
+containing optional parts.
 
-[call [cmd ::pt::ast] [method nonterminal] [arg s] \
+[call [cmd ::pt::ast] [method new] [arg s] \
 	[arg start] [arg end] [opt [arg child]...]]
 
 This command command constructs the ast for a nonterminal node
